<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Post and share your story, share your activities, and get to know other peoples story</string>
    <string name="title_welcome_page">Welcome To StorryApp!</string>
    <string name="title_signup_page">Signup your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login with your account</string>
    <string name="name">Name</string>
    <string name="copyright">© 2022 Reynaldi</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="input_email">Input your email</string>
    <string name="input_password">Input your password</string>
    <string name="information">Information</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="continue_">Continue</string>
    <string name="sign_in_success">Sign In Success</string>
    <string name="log_out_success">Log Out Success</string>
    <string name="input_name">Input your name</string>
    <string name="register_success">Signup successful</string>
    <string name="register_failed">Signup failed</string>
    <string name="list_story">List Story</string>
    <string name="no_story">No story</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="new_story">New Story</string>
    <string name="no_attach_file">No Files</string>
    <string name="upload_success">Upload successful</string>
    <string name="upload_failed">Upload failed</string>
    <string name="invalid_permission">Permission failed</string>
    <string name="didnt_have_account">Dont have account?</string>
    <string name="have_account">Have account?</string>
    <string name="description">Description</string>
    <string name="created_add">Created at</string>
    <string name="date">5/8/2021</string>
    <string name="detail_story">Detail Story</string>
    <string name="home_description">Welcome</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="setting">Settings</string>
    <string name="language">Change language</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="failed_picture">Failed to take pictures</string>
    <string name="failed_camera">Failed to bring up camera</string>
    <string name="retry">Try agin</string>
    <string name="google_map">Google maps</string>
    <string name="invalid_description">Invalid description</string>
    <string name="enable_gps_permission">Enable GPS permossion</string>
    <string name="something_wrong">Opps something wrong</string>
    <string name="error_occurred">Error</string>
    <string name="share_location">Share location</string>

</resources>